# ai-docgen

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  exceptions.py  middleware.py  security.py
backend/app/domain/: models.py
backend/app/infrastructure/: ai_service.py  code_parser.py  repository_analyzer.py
backend/app/services/: documentation_service.py
