[tool.poetry]
name = "ai-docgen-backend"
version = "0.1.0"
description = "Backend para el generador de documentación técnica con IA"
authors = ["Kevin Aguilera - kevin.danaea@gmail.com"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
pydantic = "^2.4.2"
python-multipart = "^0.0.6"
openai = "^1.2.0"
anthropic = "^0.5.0"
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
